[gd_scene load_steps=5 format=3 uid="uid://dduti5705qv5l"]

[ext_resource type="Script" path="res://eyeball.gd" id="1_keikl"]
[ext_resource type="Texture2D" uid="uid://cvjcxwc8lkf48" path="res://crawl-tiles Oct-5-2010/crawl-tiles Oct-5-2010/dc-mon/eye_of_draining.png" id="1_kw2al"]
[ext_resource type="PackedScene" uid="uid://bnxi4013q5cdx" path="res://magiceffect.tscn" id="2_k4ycs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_evnje"]
radius = 14.0

[node name="Eyeball" type="Area2D"]
top_level = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_keikl")
magicEffectScene = ExtResource("2_k4ycs")

[node name="Eyeball" type="Sprite2D" parent="."]
texture = ExtResource("1_kw2al")

[node name="MagicInUseCooldownTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_evnje")

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="MagicInUseCooldownTimer" to="." method="_on_magic_in_use_cooldown_timer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_stunned_timer_timeout"]
